Add onsubmit functionality to searchbar
Searchbar now has a prop function that is can be passed to it that will execute with the input data as a parameter when enter is pressed

--- a/nasa-explore/src/components/searchbar/Searchbar.css
+++ b/nasa-explore/src/components/searchbar/Searchbar.css
@@ -5,6 +5,7 @@
     width: 28vw;
     height: 6vh;
     padding-left: calc(20px + 2vw);
+    padding-right: 1vw;
     font-size: 2vmin;
 }
 
@@ -12,6 +13,7 @@
     .Searchbar {
       width: 300px;
       padding-left: 40px;
+      padding-right: 20px;
       font-size: 14px;
     }
     .searchIcon {
