Add redirect to '/gallery'
Home component will now redirect to '/gallery' when the searchbar component returns a query.

--- a/nasa-explore/src/components/home/Home.css
+++ b/nasa-explore/src/components/home/Home.css
@@ -1,3 +1,8 @@
+.Home-container {
+    position: relative;
+    overflow: hidden;
+}
+
 .Homepage {
     background-color:rgb(0, 0, 0);
     min-height: 100vh;
@@ -7,26 +12,4 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-  }
-
-  .Homepage-header {
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2.5vmin;
-    padding-left: 15vw;
-    background: #111311;
-    font-size: 2.5vmin;
-  }
-
-  .Homepage-header a {
-      padding-right: 10vw;
-      color: white;
-  }
-
-  .header-logo {
-    height: 6vmin;
   }
