--- a/nasa-explore/src/components/gallery/Gallery.css
+++ b/nasa-explore/src/components/gallery/Gallery.css
@@ -1,5 +1,38 @@
 .Gallery-container{
     position: relative;
     display: flex;
+    font-size: calc(10px + 2vmin);
+    color: white;
     justify-content: center;
+    min-height: 100vh;
+    align-items: center;
 }
+
+.Card-container{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin-top: 10vh;
+    list-style: none;
+}
+
+.App-logo {
+    height: 32vmin;
+    pointer-events: none;
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+    }
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
