--- a/nasa-explore/src/components/gallery/image-card/cardModal/CardModal.css
+++ b/nasa-explore/src/components/gallery/image-card/cardModal/CardModal.css
@@ -11,10 +11,122 @@
 .content {
     position: fixed;
     border-radius: 30px;
+    display: flex;
     top: 10vh;
     left: 15vw;
     width: 70vw;
     height: 80vh;
     background: white;
     overflow: hidden;
+}
+
+.card-image {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    flex: 4;
+    width: 33vw;
+    object-position: center;
+    object-fit: contain;
+    background-color: black;
+    box-shadow: 0 0 8px 8px white inset;
+    border-radius: 30px;
+}
+
+.image-info {
+    display: flex;
+    flex: 3;
+    flex-direction: column;
+    text-align: center;
+    color: black;
+    margin: 20px;
+    align-self: center;
+}
+
+.image-info h1 {
+    font-size: 12px;
+    margin: 0 0 10px;
+    color: #535050;
+}
+
+.image-info h2 {
+    text-transform: uppercase;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    font-size: 28px;
+}
+
+.image-info h4 {
+    margin: 1px 0 1px;
+    font-size: 16px;
+    line-height: 0.5;
+}
+
+.big {
+    font-size: calc(1vw - 2px);
+}
+
+.small {
+    font-size: 12px;
+}
+
+.image-info .button-container {
+    white-space: nowrap;
+}
+
+.button-container button {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    background-color: #ffaa03;
+    border: none;
+    color: #000000;
+    font-weight: bold;
+    padding: 8px 16px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    cursor: pointer;
+    border-radius: 10px;
+}
+.button-container button:hover {opacity: 1}
+
+@media only screen and (max-width: 900px) {
+    .content {
+        flex-direction: column;
+    }
+
+    .card-image {
+        flex: 1;
+        width: 66vw;
+        height: 25vh;
+    }
+
+    .movie-info {
+        flex: 1;
+        align-items: flex-start;
+    }
+
+    .image-info h1 {
+        font-size: 12px;
+    }
+
+    .image-info h2 {
+        font-size: 16px;
+    }
+
+    .image-info h4 {
+        font-size: 8px;
+        line-height: 0;
+    }
+
+    .big {
+        font-size: calc(2vw - 1px);
+    }
+    
+    .small {
+        font-size: calc(2vw - 3px);
+    }
 }
