--- a/nasa-explore/src/components/gallery/Gallery.css
+++ b/nasa-explore/src/components/gallery/Gallery.css
@@ -13,6 +13,7 @@
     flex-flow: row wrap;
     justify-content: space-around;
     padding: 0;
+    padding-bottom: 100px;
     margin-top: 10vh;
 }
 
