--- a/nasa-explore/src/components/gallery/pageNavigation/PageNavigation.css
+++ b/nasa-explore/src/components/gallery/pageNavigation/PageNavigation.css
@@ -1,7 +1,12 @@
 .PageNavigation {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     background: #111311;
-    width: calc(100% - 4vmin);
+    width: calc(100vw - 100px);
     display: flex;
     justify-content: space-between;
     padding: 2vmin;
+    padding-left: 40px;
+    padding-right: 40px;
 }
