Fix gallery breaking with less images
Fixed the card container shrinking when less images were displayed

--- a/nasa-explore/src/components/gallery/Gallery.css
+++ b/nasa-explore/src/components/gallery/Gallery.css
@@ -1,6 +1,5 @@
 .Gallery-container{
     width: 100%;
-    position: relative;
     display: flex;
     font-size: calc(10px + 2vmin);
     color: white;
@@ -10,6 +9,7 @@
 }
 
 .Card-container{
+    width: 100vw;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
