--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -1,6 +1,5 @@
 .Gallery-container{
     width: 100%;
-    position: relative;
     display: flex;
     font-size: calc(10px + 2vmin);
     color: white;
@@ -10,7 +9,8 @@
 }
 
 .Card-container{
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
