--- a/src/components/gallery/image-card/ImageCard.css
+++ b/src/components/gallery/image-card/ImageCard.css
@@ -6,6 +6,7 @@
     height: 150px;
     box-shadow: 2px 4px 4px 4px rgba(255, 255, 255, 0.1);
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .Thumbnail{
