--- a/src/components/gallery/pageNavigation/PageNavigation.css
+++ b/src/components/gallery/pageNavigation/PageNavigation.css
@@ -1,6 +1,7 @@
 .PageNavigation {
     width: 100%;
-    position: absolute;
+    display: flex;
+    position: sticky;
     bottom: 0;
     left: 0;
     background: #111311;
